# grokfit-coach

./: .env.example  .gitignore  CHANGELOG.md  PHASE_1_HANDOFF.md  PHASE_2_HANDOFF.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/seeds/: exercises.json  foods.json  golden_retrieval.json
data/seeds/nutrition/: allergen_diet_map.json  seed_foods.json
src/grokfit_coach/: __init__.py  cli.py  persistence.py
src/grokfit_coach/agents/: __init__.py  graph.py  prompts.py  state.py
src/grokfit_coach/config/: __init__.py  settings.py
src/grokfit_coach/data/: __init__.py
src/grokfit_coach/evaluation/: __init__.py  retrieval_eval.py
src/grokfit_coach/llm/: __init__.py  factory.py
src/grokfit_coach/models/: __init__.py  exercise.py  llm_config.py  nutrition.py  nutrition_plan.py  plan.py  profile.py  tracking.py
src/grokfit_coach/nutrition/: __init__.py  food_db.py  ingest_fdc.py  meal_planner.py
src/grokfit_coach/rag/: __init__.py  ingest.py  retriever.py
src/grokfit_coach/safety/: __init__.py  guardrails.py
src/grokfit_coach/storage/: __init__.py  db.py
src/grokfit_coach/tools/: __init__.py  exercise.py  nutrition.py
src/grokfit_coach/ui/: __init__.py  app.py
src/grokfit_coach/utils/: __init__.py
tests/: test_project_structure.py
tests/unit/: test_graph.py  test_llm_factory.py  test_meal_planner.py  test_models.py  test_nutrition_db.py  test_rag.py  test_safety.py  test_storage.py  test_tools.py  test_ui_chat.py  test_ui_profile.py
